--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,6 @@
   "permissions": [
   	  "http://dev.afterclassroom.com/extensions/*",
       "tabs"
-  ]
+  ],
+  "content_security_policy": "script-src 'self' https://twitter.github.com; object-src 'self'"
 }
